[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_left = 0.7
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = -16.0
offset_bottom = 0.0
follow_focus = true

[node name="VBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="ScrollContainer/VBox"]
text = "Status"
theme_override_font_sizes/font_size = 16

[node name="PlayerLabel" type="Label" parent="ScrollContainer/VBox"]
text = "Player: --"

[node name="RollLabel" type="Label" parent="ScrollContainer/VBox"]
text = "Dice: --"

[node name="PipCountLabel" type="Label" parent="ScrollContainer/VBox"]
text = "Pip Count: White 167 | Black 167"
theme_override_font_sizes/font_size = 14

[node name="MatchScoreLabel" type="Label" parent="ScrollContainer/VBox"]
text = "Match: White 0 | Black 0 (to 5)"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)

[node name="StatsLabel" type="Label" parent="ScrollContainer/VBox"]
text = "Stats (session)"
theme_override_font_sizes/font_size = 14

[node name="StatsValue" type="Label" parent="ScrollContainer/VBox"]
text = "Games 0 | W 0 / B 0 | Gammon 0 | Backgammon 0 | Avg turns 0 | Longest 0"
theme_override_font_sizes/font_size = 12

[node name="HistoryLabel" type="Label" parent="ScrollContainer/VBox"]
text = "Move History:"
theme_override_font_sizes/font_size = 14

[node name="MoveHistoryList" type="ItemList" parent="ScrollContainer/VBox"]
custom_minimum_size = Vector2(0, 120)
size_flags_vertical = 3

[node name="LegalMoves" type="ItemList" parent="ScrollContainer/VBox"]
custom_minimum_size = Vector2(0, 150)
size_flags_vertical = 3

[node name="NewGameBtn" type="Button" parent="ScrollContainer/VBox"]
text = "New Game"

[node name="EndTurnBtn" type="Button" parent="ScrollContainer/VBox"]
text = "End Turn"

[node name="UndoBtn" type="Button" parent="ScrollContainer/VBox"]
text = "Undo"

[node name="TutorialBtn" type="Button" parent="ScrollContainer/VBox"]
text = "Tutorial"

[node name="SaveBtn" type="Button" parent="ScrollContainer/VBox"]
text = "Save"

[node name="LoadBtn" type="Button" parent="ScrollContainer/VBox"]
text = "Load"

[node name="SettingsBtn" type="Button" parent="ScrollContainer/VBox"]
text = "Settings"

[node name="ReturnToMenuBtn" type="Button" parent="ScrollContainer/VBox"]
text = "Return to Menu"

[node name="ForfeitConfirmation" type="ConfirmationDialog" parent="."]
title = "Return to Menu?"
initial_position = 1
size = Vector2i(400, 200)
dialog_text = "Are you sure you want to return to menu? The current game will be forfeited."
ok_button_text = "Forfeit and Return"
cancel_button_text = "Cancel"